--- a/web/store/src/main/resources/application-developer.yml
+++ b/web/store/src/main/resources/application-developer.yml
@@ -26,8 +26,7 @@ spring:
   sql:
     init:
       mode: always
-      schema-locations: classpath:schema-develop.sql
-
+      schema-locations: classpath:schema-master.sql
 logging:
   file:
     path: log/store
