--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -26,7 +26,7 @@
     </build>
     <parent>
         <groupId>work.onss</groupId>
-        <artifactId>onss</artifactId>
+        <artifactId>merchant</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
