--- a/web/pom.xml
+++ b/web/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>work.onss</groupId>
-        <artifactId>onss</artifactId>
+        <artifactId>merchant</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
