--- a/web/pom.xml
+++ b/web/pom.xml
@@ -13,6 +13,7 @@
     <artifactId>web</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+
     <modules>
         <module>shop</module>
         <module>store</module>
@@ -22,8 +23,12 @@
     <dependencies>
         <dependency>
             <groupId>work.onss</groupId>
-            <artifactId>domain</artifactId>
+            <artifactId>service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
     </dependencies>
 
