--- a/Website/platform/package.json
+++ b/Website/platform/package.json
@@ -20,9 +20,10 @@
     ]
   },
   "dependencies": {
-    "@umijs/hooks": "^1.9.3",
-    "@ant-design/pro-table": "^2.61.8",
     "@ant-design/pro-layout": "^6.5.0",
+    "@ant-design/pro-table": "^2.61.8",
+    "@umijs/hooks": "^1.9.3",
+    "mapbox-gl": "^2.7.1",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.20"
