--- a/Website/platform/package.json
+++ b/Website/platform/package.json
@@ -29,6 +29,7 @@
     "umi": "^3.5.20"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^2.6.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
