--- a/Website/platform/package.json
+++ b/Website/platform/package.json
@@ -23,7 +23,7 @@
     "@ant-design/pro-layout": "^6.5.0",
     "@ant-design/pro-table": "^2.61.8",
     "@umijs/hooks": "^1.9.3",
-    "mapbox-gl": "^2.7.1",
+    "mapbox-gl": "git+https://gitee.com/china-1977/mapbox-gl-js.git",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.20"
