--- a/WeChat/store/app.json
+++ b/WeChat/store/app.json
@@ -54,10 +54,11 @@
     },
     "plugins": {
         "tencentvideo": {
-            "version": "2.0.9",
+            "version": "2.0.10",
             "provider": "wxa75efa648b60994b"
         }
     },
     "style": "v2",
-    "sitemapLocation": "sitemap.json"
+    "sitemapLocation": "sitemap.json",
+    "lazyCodeLoading": "requiredComponents"
 }
