--- a/WeChat/store/app.json
+++ b/WeChat/store/app.json
@@ -1,66 +1,68 @@
 {
-    "pages": [
-        "pages/score/score",
-        "pages/product/list",
-        "pages/login/stores",
-        "pages/store/store",
-        "pages/login/login",
-        "pages/login/register",
-        "pages/score/list",
-        "pages/score/detail",
-        "pages/product/detail",
-        "pages/product/edit",
-        "pages/product/create",
-        "pages/store/edit",
-        "pages/store/merchant",
-        "pages/customer/list",
-        "pages/restful/application",
-        "pages/vip/list",
-        "pages/vip/detail"
-    ],
-    "window": {
-        "backgroundTextStyle": "light",
-        "navigationBarBackgroundColor": "#fff",
-        "navigationBarTitleText": "一九七七",
-        "navigationBarTextStyle": "black"
-    },
-    "tabBar": {
-        "selectedColor": "#1296db",
-        "borderStyle": "white",
-        "backgroundColor": "#fff",
-        "list": [
-            {
-                "text": "商品",
-                "pagePath": "pages/product/list",
-                "iconPath": "/images/index0.png",
-                "selectedIconPath": "/images/index1.png"
-            },
-            {
-                "text": "订单",
-                "pagePath": "pages/score/score",
-                "iconPath": "/images/logo1.png",
-                "selectedIconPath": "/images/logo2.png"
-            },
-            {
-                "text": "我的",
-                "pagePath": "pages/store/store",
-                "iconPath": "/images/mine0.png",
-                "selectedIconPath": "/images/mine1.png"
-            }
-        ]
-    },
-    "permission": {
-        "scope.userLocation": {
-            "desc": "你的位置信息将用于小程序位置接口的效果展示"
-        }
-    },
-    "plugins": {
-        "tencentvideo": {
-            "version": "2.0.10",
-            "provider": "wxa75efa648b60994b"
-        }
-    },
-    "style": "v2",
-    "sitemapLocation": "sitemap.json",
-    "lazyCodeLoading": "requiredComponents"
+  "pages": [
+    "pages/score/score",
+    "pages/product/list",
+    "pages/login/stores",
+    "pages/store/store",
+    "pages/login/login",
+    "pages/login/register",
+    "pages/score/list",
+    "pages/score/detail",
+    "pages/product/detail",
+    "pages/product/edit",
+    "pages/product/create",
+    "pages/store/edit",
+    "pages/store/merchant",
+    "pages/customer/list",
+    "pages/restful/application",
+    "pages/vip/list",
+    "pages/vip/detail",
+    "pages/site/list",
+    "pages/site/detail"
+  ],
+  "window": {
+    "backgroundTextStyle": "light",
+    "navigationBarBackgroundColor": "#fff",
+    "navigationBarTitleText": "一九七七",
+    "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "selectedColor": "#1296db",
+    "borderStyle": "white",
+    "backgroundColor": "#fff",
+    "list": [
+      {
+        "text": "商品",
+        "pagePath": "pages/product/list",
+        "iconPath": "/images/index0.png",
+        "selectedIconPath": "/images/index1.png"
+      },
+      {
+        "text": "订单",
+        "pagePath": "pages/score/score",
+        "iconPath": "/images/logo1.png",
+        "selectedIconPath": "/images/logo2.png"
+      },
+      {
+        "text": "我的",
+        "pagePath": "pages/store/store",
+        "iconPath": "/images/mine0.png",
+        "selectedIconPath": "/images/mine1.png"
+      }
+    ]
+  },
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  },
+  "plugins": {
+    "tencentvideo": {
+      "version": "2.0.10",
+      "provider": "wxa75efa648b60994b"
+    }
+  },
+  "style": "v2",
+  "sitemapLocation": "sitemap.json",
+  "lazyCodeLoading": "requiredComponents"
 }
