--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
         <java.version>17</java.version>
         <gson.version>2.9.0</gson.version>
         <hibernate-types-52.version>2.14.0</hibernate-types-52.version>
-        <hibernate-validator.version>7.0.3.Final</hibernate-validator.version>
         <spring-boot.version>2.6.4</spring-boot.version>
         <querydsl.version>5.0.0</querydsl.version>
         <postgresql.version>42.3.3</postgresql.version>
@@ -38,6 +37,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-jdbc</artifactId>
@@ -83,11 +87,6 @@
                 <groupId>com.vladmihalcea</groupId>
                 <artifactId>hibernate-types-52</artifactId>
                 <version>${hibernate-types-52.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hibernate.validator</groupId>
-                <artifactId>hibernate-validator</artifactId>
-                <version>${hibernate-validator.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.code.gson</groupId>
