--- a/App/HeroMan/app/src/main/AndroidManifest.xml
+++ b/App/HeroMan/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="work.onss.heroman">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:usesCleartextTraffic="true"
         android:name=".HermanApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
