--- a/web/pom.xml
+++ b/web/pom.xml
@@ -18,6 +18,7 @@
         <module>shop</module>
         <module>store</module>
         <module>platform</module>
+        <module>hero</module>
     </modules>
 
     <dependencies>
