--- a/App/HeroMan/app/build.gradle
+++ b/App/HeroMan/app/build.gradle
@@ -92,4 +92,6 @@ dependencies {
 
     // Coil
     implementation("io.coil-kt:coil-compose:1.3.2")
+
+    implementation 'com.google.accompanist:accompanist-swiperefresh:0.24.7-alpha'
 }
